<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wshwsh.sample_quize_app_android.Videogame_Quiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question1"
                style="@style/QuestionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/Microsoft"
                    style="RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_1_a" />

                <RadioButton
                    android:id="@+id/Atari"
                    style="RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_1_b" />

                <RadioButton
                    android:id="@+id/Sony"
                    style="RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_1_c" />

                <RadioButton
                    android:id="@+id/Apple"
                    style="RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_1_d" />
            </RadioGroup>

            <View
                style="@style/Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question2"
                style="@style/QuestionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_2" />

            <EditText
                android:id="@+id/question2anwser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/question_2_hint" />

            <View
                style="@style/Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question3"
                style="@style/QuestionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3" />

            <CheckBox
                android:id="@+id/Pikatchu"
                style="RadioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3_a" />

            <CheckBox
                android:id="@+id/Mario"
                style="RadioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3_b" />

            <CheckBox
                android:id="@+id/Pulbasur"
                style="RadioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3_c" />

            <CheckBox
                android:id="@+id/Charmender"
                style="RadioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3_d" />

            <View
                style="@style/Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question4"
                style="@style/QuestionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/Red"
                    style="RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_4_a" />

                <RadioButton
                    android:id="@+id/Blue"
                    style="RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_4_b" />

                <RadioButton
                    android:id="@+id/Black"
                    style="RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_4_c" />

                <RadioButton
                    android:id="@+id/Orange"
                    style="RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_4_d" />
            </RadioGroup>

            <View
                style="@style/Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:onClick="viewAnswers"
                android:text="@string/submit_button_text" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

